--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ crashlytics-build.properties
 *.a
 /enviroment_assets/Library/SourCeAssetDB
 TPS_City_Hunter_main/Library/
+enviroment_assets/Library/
 
 # Additional Unity generated files
 /[Ll]ibrary/Artifacts/
