--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ crashlytics-build.properties
 /enviroment_assets/Library/SourCeAssetDB
 TPS_City_Hunter_main/Library/
 enviroment_assets/Library/
+TPS_City_Hunter_main/Temp/
+enviroment_assets/Temp/
 
 # Additional Unity generated files
 /[Ll]ibrary/Artifacts/
